# paper-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
docs/deployment/: fly-low-cost.md
docs/evaluations/: compression-runs.jsonl  compression-runs.md
docs/operations/: current-state.md
scripts/: benchmark_serving_index.py  build_ivf_int8_index.py  build_oai_index.py  convert_int8_mmap.py  evaluate_ann.py  evaluate_compression.py  evaluate_ivf_int8_index.py  preflight_artifacts.py  run_daily_update.py  seed_sample_data.py  smoke_deployment.py  sync_serving_index.py  verify_container_deployment.py
src/paper_recommender/: __init__.py  app.py  arxiv_id.py  compressed_vector_store.py  embedding.py  index_builder.py  models.py  oai.py  oai_client.py  pipeline.py  recommender.py  storage.py  (+1 more)
tests/: test_app.py  test_arxiv_id.py  test_benchmark_serving_index_script.py  test_build_ivf_int8_index_script.py  test_compressed_vector_store.py  test_convert_int8_mmap_script.py  test_deployment_packaging.py  test_documentation.py  test_embedding.py  test_evaluate_ann_script.py  test_evaluate_compression_script.py  test_evaluate_ivf_int8_index_script.py  test_index_builder.py  test_oai.py  test_oai_client.py  test_pipeline.py  test_preflight_artifacts_script.py  test_recommender.py  test_run_daily_update_script.py  test_scaffold.py  test_seed_sample_data.py  test_smoke_deployment_script.py  test_static_ui.py  test_storage.py  test_sync_serving_index_script.py  test_vector_store.py  test_verify_container_deployment_script.py
(+7 files in other folders)
