[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-recommender"
version = "0.1.0"
description = "Low-cost paper recommendation MVP using arXiv metadata."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
embed = [
  "sentence-transformers>=3,<6"
]
ann = [
  "usearch>=2.24,<3"
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.8,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_recommender = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
